Fix missing margin in settings

--- a/www/settings/app-settings.less
+++ b/www/settings/app-settings.less
@@ -256,9 +256,7 @@
             .cp-settings-profile-avatar {
                 .cp-settings-avatar-container {
                     width: 300px;
-                    //background: @cryptpad_text_col;
-                    //padding: 10px;
-                    margin: 10px 0;
+                    margin-bottom: 1.5rem;
                     border-radius: 10px;
                 }
                 .cp-avatar {
